--- a/.github/workflows/fetch-youtube-videos.yml
+++ b/.github/workflows/fetch-youtube-videos.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: Shady-Selim/Shady-Selim@master
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "YOUTUBE-VIDEOS-LIST"
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCxli98N2RGm8mvdFyuoBfZQ"
