--- a/.github/workflows/fetch-youtube-videos.yml
+++ b/.github/workflows/fetch-youtube-videos.yml
@@ -15,3 +15,7 @@ jobs:
         with:
           comment_tag_name: "YOUTUBE-VIDEOS-LIST"
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCxli98N2RGm8mvdFyuoBfZQ"
+          custom_tags: "channelId/yt:channelId/,videoId/yt:videoId/"
+          date_format: "mmm d, yyyy"
+          template: '<table><tr><td><a href="$url"><img width="140px" src="http://img.youtube.com/vi/$videoId/maxresdefault.jpg"></a></td>$newline<td><a href="$url">$title</a><br/>$date</td></tr></table>$newline'
+          committer_email: "theshadyselim@gmail.com"
