--- a/.github/workflows/fetch-youtube-videos.yml
+++ b/.github/workflows/fetch-youtube-videos.yml
@@ -17,5 +17,5 @@ jobs:
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCxli98N2RGm8mvdFyuoBfZQ"
           custom_tags: "channelId/yt:channelId/,videoId/yt:videoId/"
           date_format: "mmm d, yyyy"
-          template: '<tr><td><a href="$url"><img width="320" height="180" src="https://i1.ytimg.com/vi/$videoId/mqdefault.jpg http://img.youtube.com/vi/$videoId/maxresdefault.jpg"></a></td>$newline<td><a href="$url">$title</a><br/>$date</td></tr>$newline'
+          template: '<tr><td><a href="$url"><img width="320" height="180" src="https://img.youtube.com/vi/$videoId/mqdefault.jpg"></a></td>$newline<td><a href="$url">$title</a><br/>$date</td></tr>$newline'
           committer_email: "theshadyselim@gmail.com"
